Atualizacao na Controller Cliente Modalidade e Repository
